rsyslog (8.8.0-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Bump Build-Depends on liblognorm-dev to (>= 1.0.2).
  * Explicitly enable liblogging-stdlog feature, which is now optional.
  * Remove obsolete --enable-pmrfc3164sd configure switch. This module has
    been removed by upstream.

 -- Michael Biebl <biebl@debian.org>  Mon, 09 Mar 2015 21:35:57 +0100

rsyslog (8.6.0-1) experimental; urgency=medium

  * New upstream release.
  * Update Vcs-Browser URL to use cgit and https.
  * Bump Standards-Version to 3.9.6. No further changes.

 -- Michael Biebl <biebl@debian.org>  Thu, 29 Jan 2015 02:02:29 +0100

rsyslog (8.4.2-1) unstable; urgency=high

  * New upstream release.
    - CVE-2014-3683: The fix for CVE-2014-3634 incomplete. It did not cover
      cases where PRI values > MAX_INT caused integer overflows resulting in
      negative values.
  * Urgency high for the security fix.

 -- Michael Biebl <biebl@debian.org>  Thu, 02 Oct 2014 15:27:25 +0200

rsyslog (8.4.1-1) unstable; urgency=high

  * New upstream release.
    - CVE-2014-3634: Fix remote syslog vulnerability due to improper
      handling of invalid PRI values.
  * Drop patches which have been merged upstream.
  * Urgency high for the security fix.

 -- Michael Biebl <biebl@debian.org>  Tue, 30 Sep 2014 12:35:33 +0200

rsyslog (8.4.0-2) unstable; urgency=medium

  * Tweak rsyslog systemd service file. Add Documentation field and restart
    the rsyslogd daemon on failures.
  * Cherry-pick upstream patch to fix build failures on platforms without
    atomic instructions.

 -- Michael Biebl <biebl@debian.org>  Wed, 20 Aug 2014 19:36:33 +0200

rsyslog (8.4.0-1) unstable; urgency=medium

  * New upstream release.
  * Update patches:
    - Refresh 0001-Don-t-create-a-database.patch.
    - Drop 0002-Fix-pidfile-location.patch, merged upstream.
  * Add --disable-generate-man-pages to configure flags to avoid a build
    dependency on python-docutils. We don't ship the generated man pages